# midir

./: .gitignore  README.md  pyproject.toml
src/midir/: __init__.py
tests/: test_unit.py
